--- a/tougirl/index.html
+++ b/tougirl/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>To Demo</title>
+		<title>Demo</title>
 		<meta name="description" content="Change OR Die" />
 		<link rel="stylesheet" href="css/wedding.css">
 	</head>
