添加社交账号

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<a href="#me" class="icon icon-user active"><span>Me</span></a>
 			<a href="#work" class="icon icon-folder"><span>关于我</span></a>
 			<a href="#email" class="icon icon-mail"><span>Email Me</span></a>
-			<a href="#" class="icon icon-twitter"><span>Twitter</span></a>
+			<a href="#twitter" class="icon icon-twitter"><span>Twitter</span></a>
 		</nav>
 
 		<!-- Main -->
@@ -114,7 +114,7 @@
 						</div>
 						<div class="row">
 							<div class="12u">
-								<textarea name="message" placeholder="Message"></textarea>
+								<textarea name="message" placeholder="Hi 大魔王"></textarea>
 							</div>
 						</div>
 						<div class="row">
@@ -122,6 +122,19 @@
 								<input type="submit" class="button" value="Send Message" />
 							</div>
 						</div>
+					</div>
+				</form>
+			</article>
+			
+			<!-- 社交账号 -->
+			<article id="twitter" class="panel">
+				<header>
+					<h2>博客与社交</h2>
+				</header>
+				<form action="#" method="post">
+					<div class="5grid">
+						<li>CSDN 博客 <a href="http://blog.csdn.net/u013908686" title="csdn" target="_blank">传送门</a></li><br>
+						<li>github <a href="https://github.com/MagicPrince666" title="github" target="_blank">传送门</a></li><br>
 					</div>
 				</form>
 			</article>
@@ -136,6 +149,8 @@
 				<li>connet to: <a href="wind/index.html" title="龙卷风示例" target="_blank">数码龙卷风</a></li><br>
 				<li>connet to: <a href="hack/index.html" title="黑客帝国" target="_blank">黑客帝国</a></li><br>
 				<li>connet to: <a href="tougirl/index.html" title="机密" target="_blank">动画效果</a></li><br>
+				<li>Copyright &copy; 2021-2022 www.prince678.top </li><br>
+				<li><a href="#" target="_blank">粤ICP备19120680号</a></li>
 			</ul>
 		</div>
 
