--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 		<div id="footer">
 			<ul class="links">
 				<li>&copy; 黄李全</li>
-				<li>connet to: <a href="fireflower.html" title="烟花示例" target="_blank">烟花示例</a></li><br>
+				<li>connet to: <a href="fireflower/fireflower.html" title="烟花示例" target="_blank">烟花示例</a></li><br>
 				<li>connet to: <a href="wind/index.html" title="龙卷风示例" target="_blank">数码龙卷风</a></li><br>
 				<li>connet to: <a href="hack/index.html" title="黑客帝国" target="_blank">黑客帝国</a></li><br>
 				<li>connet to: <a href="tougirl/index.html" title="机密" target="_blank">动画效果</a></li><br>
