--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 政治面貌：团 员                         民  族：汉  族                          学  历：本 科
 毕业院校：太原工业学院        专  业：自动化
 邮  箱：846863428@qq.com      手  机：15220187476
-工作经验：6年+</code></pre>
+工作经验：7年</code></pre>
 				<h2 id="大学教育">大学教育</h2>
 				<table>
 					<thead>
@@ -91,6 +91,11 @@
 					</thead>
 					<tbody>
 						<tr class="odd">
+							<td>2023.02</td>
+							<td style="text-align: center;">至今</td>
+							<td style="text-align: right;">霞智科技有限公司</td>
+						</tr>
+						<tr class="odd">
 							<td>2021.05</td>
 							<td style="text-align: center;">2022.12</td>
 							<td style="text-align: right;">深圳乐动机器人股份有限公司</td>
@@ -109,16 +114,28 @@
 				</table>
 				<h2 id="职业技能">职业技能</h2>
 				<ul>
-					<li>嵌入式操作系统 linux(openwrt,buildroot,yocto)、freertos；</li>
+					<li>嵌入式操作系统 linux(openwrt,buildroot,ubuntu)、freertos；</li>
 					<li>编程语言 c/c++、python、rust、汇编、html、node.js；</li>
-					<li>应用软件
-						libusb、live555、frp、ffmpeg、protocbuf、openssl、VPN等;</li>
-					<li>硬件相关 arm(ti am335x, nxp imx6ull/imx8mm/imx8mp,
+					<li>应用软件 ros/ros2、live555、ffmpeg、protocbuf、Cyberrt等;</li>
+					<li>硬件平台 arm(ti am335x, nxp imx6ull/imx8mm/imx8mp,
 						全志v3s/f1c200s/H3/H5/R328, amlogic A311D, SigmaStar ssd222d, qca
-						ipq40xx)、mips/mipsel(mtk 7688/7628, Atheros
-						9432/9531)、mcu（stm/51/esp32)、risc-v(全志 D1/D1s)。</li>
+						ipq40xx, 瑞芯微rk3308/rk3566/rk3588)、mips/mipsel(mtk 7688/7628, Atheros
+						9432/9531)、mcu(stm/51/esp32)、risc-v(全志 D1/D1s)。</li>
 				</ul>
 				<h2 id="项目经验">项目经验</h2>
+				<h3 id="霞智科技">霞智科技</h3>
+				<p>霞智科技创立于2021年，作为中兴发展人工智能总部，秉承以科技创新为 驱动力，为客户提供更标准、更智能的解决方案。</p>
+				<h4 id="运用技术">运用技术</h4>
+				<p>ros/ros2、cyberrt、canopen、ubuntu、单线/多线激光雷达、slam建图、运动学模型、深度相机、地图编辑等</p>
+				<h4 id="负责工作">负责工作</h4>
+				<ol type="1">
+					<li>机器人底盘服务架构设计和实现</li>
+				</ol>
+				<p>基于ros2的发布订阅框架，实现机器人的底盘服务，包括机器人的行走，转向，轮式里程计，控制权切换等功能</p>
+				<ol start="2" type="1">
+					<li>实现机器人业务流程控制</li>
+				</ol>
+				<p>基于行为树实现机器人的业务功能逻辑</p>
 				<h3 id="乐动机器人">乐动机器人</h3>
 				<p>深圳乐动机器人有限公司是一家做机器人的公司，尤其擅长扫地机器人领域</p>
 				<h4 id="运用技术">运用技术</h4>
@@ -275,6 +292,7 @@
 				</ol>
 				<h3 id="擅长技能">擅长技能</h3>
 				<ul>
+					<li>ubuntu 定制</li>
 					<li>buildroot 深度定制</li>
 					<li>openwrt 深度定制</li>
 					<li>C/C++ 应用开发</li>
